--- a/PhDManager.Web/Components/Pages/Auth/Login.razor
+++ b/PhDManager.Web/Components/Pages/Auth/Login.razor
@@ -27,7 +27,7 @@
             <RadzenPassword @bind-Value="@UserLogin.Password" Name="Password" />
 
 
-            <RadzenButton class="fit" Text="Login" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
+            <RadzenButton class="width-fit" Text="Login" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
         </RadzenStack>
     </EditForm>
 </RadzenStack>
