--- a/PhDManager.Web/Components/Pages/Theses/ThesisAddition.razor
+++ b/PhDManager.Web/Components/Pages/Theses/ThesisAddition.razor
@@ -13,7 +13,7 @@
 
 <PageTitle>Add Thesis</PageTitle>
 
-<EditForm Model="ThesisData" FormName="add-thesis" OnSubmit="@HandleSubmit">
+<EditForm class="rz-m-4" Model="ThesisData" FormName="add-thesis" OnSubmit="@HandleSubmit">
     <AntiforgeryToken />
 
     <RadzenStack>
