--- a/PhDManager.Web/Components/Pages/Theses/ThesisOverview.razor
+++ b/PhDManager.Web/Components/Pages/Theses/ThesisOverview.razor
@@ -13,7 +13,7 @@
 }
 else
 {
-    <RadzenStack>
+    <RadzenStack class="rz-m-4">
         <RadzenText TextStyle="TextStyle.H3">@_thesis?.Title</RadzenText>
         <RadzenText>@_thesis?.Description</RadzenText>
     </RadzenStack>
