--- a/PhDManager.Web/Components/App.razor
+++ b/PhDManager.Web/Components/App.razor
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <title>PhD Manager</title>
     <link rel="stylesheet" href="PhDManager.Web.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
